Tugas Harian 4 Minggun 1 a

--- a/Tugas Hari 4_Made Dwiki Darmawan.ipynb
+++ b/Tugas Hari 4_Made Dwiki Darmawan.ipynb
@@ -784,17 +784,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sudah berapa lama kamu merasa seperti ini?\n",
+      ":)\n",
       "maaf, aku tidak tahu jawaban dari pertanyaanmu\n",
       "nama saya  Made\n",
-      "hari ini tanggal 19\n"
+      "hari ini tanggal 20\n"
      ]
     }
    ],
@@ -822,7 +822,7 @@
     "# list jawaban untuk pertanyaan tentang tanggal\n",
     "jawaban_tanggal = [\n",
     "      \"hari ini tanggal {0}\".format(tanggal),\n",
-    "      \"ya ampun masa tidak tahu, hari ini tanggal\".format(tanggal)\n",
+    "      \"ya ampun masa tidak tahu, hari ini tanggal {0}\".format(tanggal)\n",
     "    ]\n",
     "\n",
     "# opsi pertanyaan yang bisa dijawab\n",
@@ -854,12 +854,16 @@
     "# ayo buat chatbotmu\n",
     "def chatbot(message):\n",
     "    ## code disini\n",
-    "    if message in responses['pertanyaan']:\n",
-    "        return random.choice(pertanyaan[message])\n",
-    "    elif message[-1]=='?':\n",
-    "        return default\n",
-    "    else:\n",
-    "        return random.choice(responses['statement'])\n",
+    "    for index in message[-1]:\n",
+    "        if index =='?':\n",
+    "            if 'nama' in message:\n",
+    "                return random.choice(jawaban_nama)\n",
+    "            elif 'tanggal' in message:\n",
+    "                return random.choice(jawaban_tanggal)\n",
+    "            else:\n",
+    "                return default\n",
+    "        else:\n",
+    "            return random.choice(statement)\n",
     "            \n",
     "            \n",
     "print(chatbot('Selamat Pagi'))\n",
